--- a/Resource/locale/message.ja.yml
+++ b/Resource/locale/message.ja.yml
@@ -1,5 +1,6 @@
 plugin.admin.product_review.save.complete: 商品レビューを保存しました。
 plugin.admin.product_review.save.error: 商品レビューを保存できませんでした。
+plugin.admin.product_review.not_found: 商品レビューは見つかりませんでした。
 plugin.admin.product_review.delete.complete: 商品レビューを削除しました。
 plugin.admin.product_review.delete.error: 商品レビューを削除できませんでした。
 plugin.front.product_review.system.error: 登録処理でシステムエラーが発生しました。大変お手数ですが、サイト管理者までご連絡ください。
