--- a/Resource/locale/messages.ja.yml
+++ b/Resource/locale/messages.ja.yml
@@ -1,58 +1,58 @@
-plugin.admin.product_review.save.complete: 商品レビューを保存しました。
-plugin.admin.product_review.save.error: 商品レビューを保存できませんでした。
-plugin.admin.product_review.not_found: 商品レビューは見つかりませんでした。
-plugin.admin.product_review.delete.complete: 商品レビューを削除しました。
-plugin.admin.product_review.delete.error: 商品レビューを削除できませんでした。
-plugin.front.product_review.system.error: 登録処理でシステムエラーが発生しました。大変お手数ですが、サイト管理者までご連絡ください。
-admin.product.product_review.not_found: 製品が見つかりません。
-plugin.admin.product_review_config.save.complete: 商品レビュー設定が保存されました。
-plugin.admin.product_review_config.save.error: 商品のレビュー設定を保存できませんでした。
+plugin.product_review.admin.save.complete: 商品レビューを保存しました。
+plugin.product_review.admin.save.error: 商品レビューを保存できませんでした。
+plugin.product_review.admin.not_found: 商品レビューは見つかりませんでした。
+plugin.product_review.admin.delete.complete: 商品レビューを削除しました。
+plugin.product_review.admin.delete.error: 商品レビューを削除できませんでした。
+plugin.product_review.front.system.error: 登録処理でシステムエラーが発生しました。大変お手数ですが、サイト管理者までご連絡ください。
+plugin.product_review.admin.product.not_found: 製品が見つかりません。
+plugin.product_review.admin_config.save.complete: 商品レビュー設定が保存されました。
+plugin.product_review.admin_config.save.error: 商品のレビュー設定を保存できませんでした。
 
 plugin.admin.product.management.title: 商品管理
 plugin.admin.product.management.title.sub: 商品レビューの設定
-plugin.admin.product_review.edit.title.sub: 商品レビュー管理
-plugin.admin.product_review.setting: 商品レビューの設定
-plugin.admin.product_review.configration: 設定
-plugin.admin.product_review.form.product: 商品レビュー
-plugin.admin.product_review.form.product.name: 商品名
-plugin.admin.product_review.form.product.code: 商品コード
-plugin.admin.product_review.form.post.date: 投稿日
-plugin.admin.product_review.form.name.contributor: 投稿者名
-plugin.admin.product_review.form.level: 選択してください
-plugin.admin.product_review.form.authorURL: 投稿者URL
-plugin.admin.product_review.form.sex: 性別
-plugin.admin.product_review.form.recommended.level: おすすめレベル
-plugin.admin.product_review.form.comment.title: タイトル
-plugin.admin.product_review.form.comment.content: コメント
-plugin.admin.product_review.form.return.to.search.screen: 検索画面に戻る
-plugin.admin.product_review.search.inputsearch.placeholder: 投稿者名・投稿者URL
-plugin.admin.product_review.search.multi: 表示
-plugin.admin.product_review.list.posted.date: 投稿日
-plugin.admin.product_review.list.contributor: 投稿者
-plugin.admin.product_review.list.product.name: 商品名
-plugin.admin.product_review.list.title: タイトル
-plugin.admin.product_review.list.level: おすすめレベル
-plugin.admin.product_review.list.status: 公開・非公開
-plugin.admin.product_review.list.title.edit.name: 名前を編集
-plugin.admin.product_review.config.form: 商品レビューの設定
-plugin.admin.product_review.config.input.limit: レビューの表示件数(1～30)
+plugin.product_review.admin.edit.title.sub: 商品レビュー管理
+plugin.product_review.admin.setting: 商品レビューの設定
+plugin.product_review.admin.configration: 設定
+plugin.product_review.admin.form.product: 商品レビュー
+plugin.product_review.admin.form.product.name: 商品名
+plugin.product_review.admin.form.product.code: 商品コード
+plugin.product_review.admin.form.post.date: 投稿日
+plugin.product_review.admin.form.name.contributor: 投稿者名
+plugin.product_review.admin.form.level: 選択してください
+plugin.product_review.admin.form.authorURL: 投稿者URL
+plugin.product_review.admin.form.sex: 性別
+plugin.product_review.admin.form.recommended.level: おすすめレベル
+plugin.product_review.admin.form.comment.title: タイトル
+plugin.product_review.admin.form.comment.content: コメント
+plugin.product_review.admin.form.return.to.search.screen: 検索画面に戻る
+plugin.product_review.admin.search.inputsearch.placeholder: 投稿者名・投稿者URL
+plugin.product_review.admin.search.multi: 表示
+plugin.product_review.admin.list.posted.date: 投稿日
+plugin.product_review.admin.list.contributor: 投稿者
+plugin.product_review.admin.list.product.name: 商品名
+plugin.product_review.admin.list.title: タイトル
+plugin.product_review.admin.list.level: おすすめレベル
+plugin.product_review.admin.list.status: 公開・非公開
+plugin.product_review.admin.list.title.edit.name: 名前を編集
+plugin.product_review.admin.config.form: 商品レビューの設定
+plugin.product_review.admin.config.input.limit: レビューの表示件数(1～30)
 
-plugin.front.product_review.review: レビューを書く
-plugin.front.product_review.title: 商品について、お客様のご感想をお待ちしております。
-plugin.front.product_review.product.name: 商品名
-plugin.front.product_review.review.product: この商品のレビュー
-plugin.front.product_review.review.write.down: レビューを書く
-plugin.front.product_review.reviewer.name: さん
-plugin.front.product_review.form.confirm: 確認ページヘ
-plugin.front.product_review.form.back: 戻る
-plugin.front.product_review.form.send: 送信する
-plugin.front.product_review.error: レビューを書く - エラー
-plugin.front.product_review.top.page.link: トップページへ
-plugin.front.product_review.confirm.page.tile: レビューを書く
-plugin.front.product_review.confirm.page.remind: "下記の内容で送信してもよろしいでしょうか？<br/>よろしければ、一番下の「送信する」ボタンをクリックしてください。"
-plugin.front.product_review.complete.thank.you: ありがとうございました。
-plugin.front.product_review.complete.message: "内容を確認後、反映させていただきます。<br>今しばらくお待ちくださいませ。"
-plugin.front.product_review.complete.btn.return: 商品ページに戻る
+plugin.product_review.front.review: レビューを書く
+plugin.product_review.front.title: 商品について、お客様のご感想をお待ちしております。
+plugin.product_review.front.product.name: 商品名
+plugin.product_review.front.review.product: この商品のレビュー
+plugin.product_review.front.review.write.down: レビューを書く
+plugin.product_review.front.reviewer.name: さん
+plugin.product_review.front.form.confirm: 確認ページヘ
+plugin.product_review.front.form.back: 戻る
+plugin.product_review.front.form.send: 送信する
+plugin.product_review.front.error: レビューを書く - エラー
+plugin.product_review.front.top.page.link: トップページへ
+plugin.product_review.front.confirm.page.tile: レビューを書く
+plugin.product_review.front.confirm.page.remind: "下記の内容で送信してもよろしいでしょうか？<br/>よろしければ、一番下の「送信する」ボタンをクリックしてください。"
+plugin.product_review.front.complete.thank.you: ありがとうございました。
+plugin.product_review.front.complete.message: "内容を確認後、反映させていただきます。<br>今しばらくお待ちくださいませ。"
+plugin.product_review.front.complete.btn.return: 商品ページに戻る
 
-plugin.admin.product_review.nav: 商品レビュー
-plugin.admin.product_review.no.review: まだクチコミはありません
+plugin.product_review.admin.nav: 商品レビュー
+plugin.product_review.admin.no.review: まだクチコミはありません
